# openclaw-knowledgebase

./: .env.example  CHANGELOG.md  PLAN.md  README.md  pyproject.toml  schema.sql  schema_memory.sql
skills/bootstrap/: README.md  bootstrap.py  instructions.md
src/knowledgebase/: __init__.py  cli.py  client.py  config.py  embeddings.py  log.py  search.py
src/knowledgebase/ingest/: __init__.py  chunker.py  crawler.py  docling_parser.py
src/knowledgebase/memory/: __init__.py  agent_client.py  auth.py  models.py
src/knowledgebase/web/: __init__.py  app.py
src/knowledgebase/web/templates/: base.html  dashboard.html  search.html  settings.html  sources.html
src/knowledgebase/web/templates/partials/: add_modal.html  job_toast.html  search_results.html
