[project]
name = "openclaw-knowledgebase"
version = "0.1.0"
description = "Self-hosted RAG system with Ollama embeddings and Supabase/pgvector"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "OpenClaw Community" }
]
keywords = ["rag", "embeddings", "ollama", "supabase", "pgvector", "ai", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
docling = [
    "docling>=2.0.0",
]
crawl = [
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
all = [
    "openclaw-knowledgebase[docling,crawl,web]",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
kb = "knowledgebase.cli:main"

[project.urls]
Homepage = "https://github.com/f2daz/openclaw-knowledgebase"
Documentation = "https://github.com/f2daz/openclaw-knowledgebase#readme"
Repository = "https://github.com/f2daz/openclaw-knowledgebase"
Issues = "https://github.com/f2daz/openclaw-knowledgebase/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledgebase"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
